# jlab-desktop

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  index.html  package-lock.json  package.json  third.json  tsconfig.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
TODO/: README.md  integrity-check-build-sha256-vs-github-release.md  linux-builds-deb-rpm-appimage.md  multi-uploader-with-local-queue-and-report-page.md  polish-frontend-design-with-frontend-design-skill.md  scan-result-signature-disclaimer.md  threat-intel-parse-fails-error-decoding-response-body.md  watched-folders-auto-scan-native-alerts.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  error.rs  history.rs  lib.rs  main.rs
src/lib/: api.ts  types.ts
src/lib/components/: AppFooter.tsx  BrandMark.tsx  DropZone.tsx  ErrorBanner.tsx  FamilyAlert.tsx  IdleDashboard.tsx  LazyMount.tsx  LogControl.tsx  RemoteStatus.tsx  ScanProgress.tsx  SeverityBadge.tsx  SignatureCard.tsx  SignatureDisclaimer.tsx  SignatureList.tsx  StateCrumb.tsx  ThirdPartyIntel.tsx  UpdaterButton.tsx
