[package]
name = "jlab-desktop"
version = "0.1.2"
description = "Cross-platform desktop client for the JLab static JAR scanner API"
authors = ["JLab Desktop Contributors"]
license = "MIT OR Apache-2.0"
repository = ""
edition = "2021"
rust-version = "1.85"

[lib]
name = "jlab_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["multipart", "rustls-tls", "json"] }
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros", "sync"] }
thiserror = "2"
zip = { version = "8", default-features = false, features = ["deflate"] }
sha2 = "0.10"
log = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
